fixed styles on mobile and hover pointer bug

--- a/css/main.css
+++ b/css/main.css
@@ -238,8 +238,7 @@ section[role="quiz-interface"] {
     -moz-user-select: none;
     -ms-user.contain-select: none;
     user-select: none;
-    
-    
+
 }
 
 /* Create a custom radio button */
@@ -277,20 +276,9 @@ section[role="quiz-interface"] {
 }
 /* On mouse-over, add a grey background color */
 
-
-
-.choice:hover .choice-text {
-    background-color: rgba(124,  231, 0, 0.33)
-}
 .choice:hover .custom-button {
     background-color: #0969A2;
     filter:drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.08))
-}
-.custom-button:hover {
-    background-color: #0969A2;
-}
-.custom-button:hover ~ .choice-text{
-    background-color: #0969A2
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
@@ -332,13 +320,13 @@ lottie-player {
         padding: 0px;
     }
     .app-container {
-        width: 95vw;
-        height: 87.33vh;
+        width: 98vw;
+        height: 83vh;
         border-radius: 15px;
     }
 
     .app-container, .cover-container, .heading-container, .final-results-container {
-        max-width: 95vw;
+        max-width: 98vw;
         width: 100vw;
         margin: 0;
     }
@@ -391,4 +379,16 @@ lottie-player {
     .choice {
         margin: 39px 0px 39px 42px;
     }
+}
+
+@media (pointer: fine) {
+    .choice:hover .choice-text {
+        background-color: rgba(124,  231, 0, 0.33)
+    }
+    .custom-button:hover {
+        background-color: #0969A2;
+    }
+    .custom-button:hover ~ .choice-text{
+        background-color: #0969A2
+    }  
 }
